# funbuild

./: .gitignore  README.md  hello.py  pyproject.toml  setup.py
src/funbuild/core/: core.py
src/nltbuild/core/: __init__.py  base.py  cli.py  core.py  empty_build.py  hybrid.py  npm_frontend.py  poetry_build.py  pypi_build.py  registry.py  util.py  uv_build.py  version_sync.py
useless/manage/: core.py
