[project]
name = "funbuild"
version = "1.5.35"
description = "Add your description here"
readme = "README.md"
license = "MIT OR Apache-2.0"
license-files = [ "LICENSE-MIT", "LICENSE-APACHE",]
requires-python = ">=3.8"
dependencies = [ "ruff>=0.8.0", "toml>=0.10.2", "uv>=0.5.5",]
keywords = [ "build", "requirements", "packaging", "uv",]
[[project.authors]]
name = "niuliangtao"
email = "farfarfun@qq.com"

[project.scripts]
funbuild = "funbuild.core:funbuild"

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.lint]
select = [ "I", "E", "W", "B", "F", "UP", "RUF", "PL",]
fixable = [ "I",]
ignore = [ "E501", "UP006", "UP007", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004",]
